--- a/css/demo.css
+++ b/css/demo.css
@@ -50,10 +50,12 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
-  font: 400 14px/ 1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #676767;
   height: 100%;
   margin: 0;
+  font-size: 14px;
+  line-height: 1.5;
+  font-family: font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #fff;
   position: relative; }
 
