--- a/css/effect2.css
+++ b/css/effect2.css
@@ -83,62 +83,8 @@
 	text-align: center;
 	line-height: 1;
 }
-
-.browser {
-	margin: 0 auto;
-	padding-top: 8%;
-	min-height: 400px;
-	max-width: 1000px;
-	width: 100%;
-	border-radius: 8px;
-	background: #fff url(../img/browser.png) no-repeat 50% 0;
-	background-size: 100%;
-	color: #d3d3d3;
-}
-
-.box {
-	float: left;
-	padding: 3.5em;
-	width: 33.3%;
-	font-size: 0.7em;
-	line-height: 1.5;
-}
-
-.box p {
-	font-family: 'Blokk', Arial, sans-serif;
-}
-
-[class^="icon-"]::before, 
-[class*=" icon-"]::before {
-	display: block;
-	margin-bottom: 0.5em;
-	padding: 0.5em;
-	border-radius: 5px;
-	background: #dfdfdf;
-	color: #fff;
-	text-align: center;
-	text-transform: none;
-	font-weight: normal;
-	font-style: normal;
-	font-variant: normal;
-	font-size: 5em;
-	font-family: 'feather';
-	line-height: 1;
-	speak: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-.icon-bell:before {
-	content: "\e006";
-}
-
-.icon-cog:before {
-	content: "\e023";
-}
-
-.icon-heart:before {
-	content: "\e024";
+.ip-main h3{
+	color:#159957;
 }
 
 /* Animations */
